# demiurge

./: .gitignore  Adder.cpp  Adsr.cpp  Adsr.h  AudioInPort.cpp  AudioOutPort.cpp  AudioOutPort.h  Averager.cpp  CMakeLists.txt  Calculator.cpp  Clipping.cpp  Clipping.h  ControlPair.cpp  ControlPair.h  CvInPort.cpp  CvInPort.h  CvOutPort.cpp  CvOutPort.h  Demiurge.cpp  Demiurge.h  FixedSignal.cpp  FixedSignal.h  GateInPort.cpp  GateOutPort.cpp  GateOutPort.h  Inverter.cpp  Inverter.h  Kconfig  LED.cpp  LED.h  Log.cpp  Log10.cpp  Log2.cpp  Mixer.cpp  Mixer.h  Multiplier.cpp  OctavePerVolt.cpp  Oscillator.cpp  Pan.cpp  Pan.h  (+48 more)
adc128s102/: ADC128S102.c  ADC128S102.cpp  ADC128S102.h
examples/VCA/: VCA.ino
i2s/: all-i2s-fields.txt  i2s_print.c  i2s_print.h  initial-I2S.txt
mclk/: Mclk.cpp  Mclk.h
mcp4822/: MCP4822.c  MCP4822.cpp  MCP4822.h
spi/: aaa_spi.c  aaa_spi.h
tlv320/: Tlv320aic3104.cpp  Tlv320aic3104.h  i2s_print.c  i2s_print.h
